[package]
name = "lmage"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
futures-executor = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "23.0.0"
winit = { version = "0.30.5", features = ["rwh_06"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-web = "0.1.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
