[package]
name = "lmage"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "23.0.0"
winit = { version = "0.30.5", features = ["rwh_06"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-executor = "0.3.31"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
console_error_panic_hook = "0.1.7"
tracing-web = "0.1.3"
wgpu = { version = "23.0.0", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
